--- a/cnu-JS30-smalltasks/JS30_17_SortingWithoutPart.html
+++ b/cnu-JS30-smalltasks/JS30_17_SortingWithoutPart.html
@@ -71,15 +71,13 @@
         if (firstStripped > secondStripped) {
           return 1;
         }
-        if (firstStripped > secondStripped) {
-          return 1;
+        if (firstStripped < secondStripped) {
+          return -1;
         }
         return 0;
       }
 
-      const sortedBands = bands.sort((firstBand, secondBand) => {
-        compareNames(firstBand, secondBand);
-      });
+      const sortedBands = bands.sort(compareNames);
 
       document.getElementById("bands").innerHTML = sortedBands
         .map((band) => `<li>${band}</li>`)
