promise solution exchanged for native event

--- a/cnu-JS30-smalltasks/JS30_23_SpeechSynthesis.html
+++ b/cnu-JS30-smalltasks/JS30_23_SpeechSynthesis.html
@@ -45,28 +45,24 @@
       const msg = new SpeechSynthesisUtterance();
       const voices = [];
 
-      function populateVoicesOptions(voiceOptions) {
-        for (let i = 0; i < voiceOptions.length; i++) {
+      function populateVoicesOptions() {
+        voices.push(...synth.getVoices());
+        for (let i = 0; i < voices.length; i++) {
           const option = document.createElement("option");
-          option.textContent = `${voiceOptions[i].name} (${voiceOptions[i].lang})`;
+          option.textContent = `${voices[i].name} (${voices[i].lang})`;
           option.value = i;
           voiceSelect.appendChild(option);
         }
       }
 
-      const getVoicesPromise = new Promise((resolve, reject) => {
-        id = setInterval(() => {
-          if (synth.getVoices().length !== 0) {
-            resolve(synth.getVoices());
-            clearInterval(id);
-          }
-        }, 10);
-      });
-
-      getVoicesPromise.then((voiceOptions) => {
-        voices.push(...voiceOptions);
-        populateVoicesOptions(voices);
-      });
+      populateVoicesOptions(voices);
+      // browsers which return empty [] on immediate call of .getVoices()
+      // after pageLoad have useful onvoiceschanged event
+      if (synth.onvoiceschanged !== undefined) {
+        synth.onvoiceschanged = () => {
+          populateVoicesOptions(voices);
+        };
+      }
 
       function startSpeech() {
         const msg = new SpeechSynthesisUtterance(inputTxt.value);
